fixed a memory leak; added a mem leak test

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ addons:
             - libopencv-dev
             - libdispatch0
             - libdispatch-dev
+            - valgrind
 
 before_install:
     - pip install --user --upgrade pip
