use make on Travis so there is output from the regression test

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ addons:
             - llvm-toolchain-trusty-6.0
 
         packages:
-            - ninja-build
-            - g++-8
+            - libstdc++-8-dev
             - llvm-6.0-dev
             - llvm-6.0-tools
             - clang-6.0
@@ -32,7 +31,7 @@ script:
   - ./xgboost/get.sh
   - mkdir _build && cd _build
   - ../benchmark/setup.sh
-  - cmake -DLLVM_DIR=/usr/lib/llvm-6.0/cmake -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DEASY_JIT_EXAMPLE=ON -DEASY_JIT_BENCHMARK=ON -DBENCHMARK_DIR=`pwd`/benchmark/install -DCMAKE_INSTALL_PREFIX=`pwd`/../install .. -G Ninja
-  - ninja
-  - ninja install
-  - ninja check
+  - cmake -DLLVM_DIR=/usr/lib/llvm-6.0/cmake -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DEASY_JIT_EXAMPLE=ON -DEASY_JIT_BENCHMARK=ON -DBENCHMARK_DIR=`pwd`/benchmark/install -DCMAKE_INSTALL_PREFIX=`pwd`/../install .. -G "Unix Makefiles"
+  - make -j 3
+  - make install
+  - make check
