The driver no longer blocks if there appears to be active compile jobs.
Instead, it returns the best version seen so far.
This behaviour can be controlled via the new `blocking`
option to `reoptimize`.

--- a/doc/readme/README.md.in
+++ b/doc/readme/README.md.in
@@ -217,7 +217,8 @@ To use the random search, we would specify `tuner::AT_Random` like so:
 The current list of tuning options (namespaces omitted) are:
 
 - `tuner_kind(x)` — where `x` is one of `AT_None`, `AT_Random`, `AT_Bayes`, `AT_Anneal`.
-- `pct_err(x)` — where `x` is a double representing the precentage of tolerated time-measurement error during tuning. If `x < 0` then the first measurement is always accepted. The default is currently `1.0`.
+- `pct_err(x)` — where `x` is a double representing the precentage of tolerated time-measurement error during tuning. If `x < 0` then the first measurement is always accepted. The default is currently `2.0`.
+- `blocking(x)` — where `x` is a bool indicating whether `reoptimize` should wait on concurrent compile jobs when it is not required. The default is `false`.
 
 #### Autotuning a Function
 
