work around dependency mess with atjitc script

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,6 @@ script:
   - mkdir _build && cd _build
   - ../benchmark/setup.sh
   - cmake -DLLVM_DIR=/usr/lib/llvm-6.0/cmake -DCMAKE_BUILD_TYPE=${BUILD_KIND} -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DEASY_JIT_EXAMPLE=ON -DBENCHMARK=ON -DBENCHMARK_DIR=`pwd`/benchmark/install -DCMAKE_INSTALL_PREFIX=`pwd`/../install .. -G "Unix Makefiles"
-  # NOTE: the build target is broken right now: benchmark depends on install due to atjitc script.
-  # - make -j 3
-  - make install -j3
+  - make -j 3
+  - make install
   - make check
