--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -24,7 +24,6 @@ add_library(EasyJitRuntime SHARED
 # it will get stripped during install without this.
 set_target_properties(EasyJitRuntime PROPERTIES
                       INSTALL_RPATH ${XGB_LIB_DIR}
-                      INSTALL_RPATH LLVM
                       INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 target_link_libraries(EasyJitRuntime PUBLIC ${XGB_LIB})
@@ -32,9 +31,9 @@ target_link_libraries(EasyJitRuntime PUBLIC ${GCD_LIB})
 
 include_directories(${GCD_INCLUDE_DIR})
 
-target_link_libraries(EasyJitRuntime PUBLIC LLVM)
+# target_link_libraries(EasyJitRuntime PUBLIC LLVM)
 
-# llvm_config(EasyJitRuntime core codegen interpreter support mcjit native executionengine passes objcarcopts)
+llvm_config(EasyJitRuntime core codegen interpreter support mcjit native executionengine passes objcarcopts)
 
 set(EASY_JIT_RUNTIME ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libEasyJitRuntime${CMAKE_SHARED_LIBRARY_SUFFIX} PARENT_SCOPE)
 
