--- a/misc/atjitc.in
+++ b/misc/atjitc.in
@@ -8,5 +8,5 @@ ${CLANGXX_BIN} -Xclang -disable-O0-optnone --std=c++${CMAKE_CXX_STANDARD} \
   -I${LLVM_INCLUDE_DIRS} \
   -I${CMAKE_INSTALL_PREFIX}/include \
   -Wl,-rpath,'${CMAKE_INSTALL_PREFIX}/lib' \
-  -L${CMAKE_INSTALL_PREFIX}/lib -lEasyJitRuntime \
+  -L${CMAKE_INSTALL_PREFIX}/lib -lEasyJitRuntime -lLLVM \
   "$@"
