--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,14 +11,6 @@ endif()
 
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 
-
-if (${POLLY_KNOBS})
-  message(STATUS "Polly Knobs: ON")
-  add_definitions(-DPOLLY_KNOBS)
-else()
-  message(STATUS "Polly Knobs: OFF")
-endif()
-
 ############################################
 #### identify and configure LLVM
 
@@ -43,6 +35,15 @@ if (${LLVM_ENABLE_RTTI} EQUAL "ON")
   message(FATAL_ERROR "atJIT currently requires LLVM with RTTI.")
 endif()
 
+## configure compilation flag and atjitc script for polly
+if (${POLLY_KNOBS})
+  message(STATUS "Polly Knobs: ON")
+  add_definitions(-DPOLLY_KNOBS)
+  set(LIBLLVM_LINK_FLAGS "-Wl,-rpath,'${LLVM_LIBRARY_DIR}' -L${LLVM_LIBRARY_DIR} -lLLVM")
+else()
+  message(STATUS "Polly Knobs: OFF")
+  set(LIBLLVM_LINK_FLAGS "")
+endif()
 
 
 list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
