--- a/tests/install/CMakeLists.txt
+++ b/tests/install/CMakeLists.txt
@@ -16,7 +16,7 @@ message(STATUS "LLVM Include dirs: ${LLVM_INCLUDE_DIRS}")
 include_directories(${EasyJit_INCLUDE_DIRS} ${LLVM_INCLUDE_DIRS})
 link_directories(${EasyJit_LIBRARY_DIRS})
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++17 -Xclang -disable-O0-optnone -Xclang -load -Xclang ${EasyJit_PLUGIN}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++17 -Xclang -disable-O0-optnone -Xclang -load -Xclang ${EasyJit_PLUGIN} -Wl,-rpath,'${LLVM_LIBRARY_DIR}' -L${LLVM_LIBRARY_DIR} -lLLVM")
 
 add_executable(InstallTest
   test.cpp
