don't export polly knobs at all if they're not enabled

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library(EasyJitRuntime SHARED
   tuner/Statics.cpp
   tuner/Knob.cpp
   tuner/Util.cpp
+  tuner/Driver.cpp
 )
 
 # the installed version of the library needs to
