fix the readme example

--- a/doc/readme/CMakeLists.txt
+++ b/doc/readme/CMakeLists.txt
@@ -3,12 +3,15 @@ option(EASY_JIT_EXAMPLE "Build Examples" OFF)
 if(EASY_JIT_EXAMPLE)
     find_package(OpenCV REQUIRED)
 
+    include_directories(${LLVM_INCLUDE_DIRS})
+    add_definitions(${LLVM_DEFINITIONS})
+
     set(CMAKE_CXX_COMPILER ${LLVM_TOOLS_BINARY_DIR}/clang++)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xclang -disable-O0-optnone -Xclang -load -Xclang ${EASY_JIT_PASS}")
 
     add_executable(easyjit-example camfilter.cpp)
     add_dependencies(easyjit-example easy-jit-core)
-    
+
     include_directories(${OpenCV_INCLUDE_DIRS})
     target_link_libraries(easyjit-example ${OpenCV_LIBS})
 
