adding a loop tiling regression test
dump_ir now appends the "after" IR to the provided file
on each JIT event. We needed this to help make a robust
tiling test. Thus, many tests rm the file they use for
a test since lit doesn't seem to clean that up?

--- a/tests/lit.cfg.in
+++ b/tests/lit.cfg.in
@@ -55,5 +55,8 @@ config.substitutions.append(('%FileCheck', os.path.join("@LLVM_TOOLS_BINARY_DIR@
 if "@BENCHMARK@" in ["1", "ON"] :
   config.available_features.add('benchmark')
 
+if "@POLLY_KNOBS@" in ["1", "ON"] :
+  config.available_features.add('pollyknobs')
+
 if "@CMAKE_INSTALL_PREFIX@" and os.path.exists(os.path.join("@CMAKE_INSTALL_PREFIX@", "include", "easy")):
   config.available_features.add('install')
