added loguru logging library.
license is public domain.

snapshot @ 
https://github.com/emilk/loguru/commit/862ed46e48cd58a9c82a076cfd99a9f14cc6e622

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(EasyJitRuntime SHARED
   Function.cpp
   InitNativeTarget.cpp
   Utils.cpp
+  loguru.cpp
   pass/ContextAnalysis.cpp
   pass/DevirtualizeConstant.cpp
   pass/InlineParameters.cpp
