Revert "[travis] trying llvm7 on travis's xenial"
This reverts commit 04c8e94a5106578d718bb0d7eadbea78e6f3d3b7.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,14 @@ notifications:
 
 addons:
     apt:
-        # sources:
-        #     - llvm-toolchain-xenial-8
+        sources:
+            - llvm-toolchain-xenial-8
 
         packages:
-            # - libstdc++-8-dev
-            # - llvm-8.0-dev
-            # - llvm-8.0-tools
-            # - clang-8.0
+            - libstdc++-8-dev
+            - llvm-8.0-dev
+            - llvm-8.0-tools
+            - clang-8.0
             - libopencv-dev
             - libdispatch0
             - libdispatch-dev
@@ -36,5 +36,5 @@ script:
   - ./xgboost/get.sh
   - mkdir _build && cd _build
   - ../benchmark/setup.sh
-  - cmake -DLLVM_DIR=/usr/lib/llvm-7.0/cmake -DPOLLY_KNOBS=OFF -DCMAKE_BUILD_TYPE=${BUILD_KIND} -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DEASY_JIT_EXAMPLE=ON -DBENCHMARK=0 -DBENCHMARK_DIR=`pwd`/benchmark/install -DCMAKE_INSTALL_PREFIX=`pwd`/../install .. -G "Unix Makefiles"
+  - cmake -DLLVM_DIR=/usr/lib/llvm-8.0/cmake -DPOLLY_KNOBS=OFF -DCMAKE_BUILD_TYPE=${BUILD_KIND} -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DEASY_JIT_EXAMPLE=ON -DBENCHMARK=0 -DBENCHMARK_DIR=`pwd`/benchmark/install -DCMAKE_INSTALL_PREFIX=`pwd`/../install .. -G "Unix Makefiles"
   - make -j 3 && make install && make check
